complete1st part

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <a class="link-button" href="https://www.linkedin.com/feed/">
             Download CV</a>
     </div>
-    <div>
-        <div class="right-width">
-            <h3>Portfolio<span>Blogs</span><span><a class="link-button"
-                        href="https://www.linkedin.com/feed/">Hire</a></span></h3>
-            <img src="./Images/my.png" alt="">
-        </div>
+    <div class="right-width">
+        <h3>Portfolio &emsp; Blogs &emsp;
+            <a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
+        </h3>
+        <img src="./Images/my.png" alt="">
     </div>
+
 </section>
 
 <body>
