--- a/index.html
+++ b/index.html
@@ -29,15 +29,28 @@
                 Download CV</a>
         </div>
         <div class="right-width">
-            <h3>Portfolio &emsp; Blogs &emsp;
-                <a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
+            <h3><span>Portfolio</span><span>Blogs</span>
+                <span><a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
             </h3>
             <img src="./Images/my.png" alt="">
         </div>
 
     </section>
-
-
+    <section>
+        <div class="about-me">
+            <h1>About Me</h1>
+            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.</p>
+        </div>
+        <div class="my-bio">
+            <h1>Name:</h1>
+            <h1>Email:</h1>
+            <h1>Specialty:</h1>
+            <h1>Location:</h1>
+        </div>
+    </section>
 
 </body>
 
