end of second part

--- a/index.html
+++ b/index.html
@@ -37,18 +37,30 @@
 
     </section>
     <section>
-        <div class="about-me">
+        <div class="description">
             <h1>About Me</h1>
             <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
                 websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
                 while working with me. Delivering work within time and budget which meets clients requirements in our
                 mata.</p>
         </div>
-        <div class="my-bio">
-            <h1>Name:</h1>
-            <h1>Email:</h1>
-            <h1>Specialty:</h1>
-            <h1>Location:</h1>
+        <div class="my-biodata">
+            <span>
+                <h1>Name:</h1>
+                <h3>Pallab Biswas</h3>
+            </span>
+            <span>
+                <h1>Email:</h1>
+                <h3>pallab.b7@gmail.com</h3>
+            </span>
+            <span>
+                <h1>Specialty:</h1>
+                <h3>front-end-developer</h3>
+            </span>
+            <span>
+                <h1>Location:</h1>
+                <h3>Faridpur,Bd</h3>
+            </span>
         </div>
     </section>
 
