3rd part complete

--- a/index.html
+++ b/index.html
@@ -14,28 +14,33 @@
 </head>
 
 <body>
-    <section class="flexible-container">
-        <div class="left-width">
-            <img src="./Images/developer.png" alt="" srcset="">
-        </div>
-        <div class="middle-width">
-            <h1 class="bottom-space">Bis<span class="name-color">w</span>as</h1>
-            <h1>Hi, I am</h1>
-            <h2>Pallab Biswas</h2>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
-                behaved
-                moments.</p>
-            <a class="link-button" href="https://www.linkedin.com/feed/">
-                Download CV</a>
-        </div>
-        <div class="right-width">
-            <h3><span>Portfolio</span><span>Blogs</span>
-                <span><a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
-            </h3>
-            <img src="./Images/my.png" alt="">
+    <!-- section1 starts here -->
+    <section>
+        <div class="flexible-container">
+            <div class="left-width">
+                <img src="./Images/developer.png" alt="" srcset="">
+            </div>
+            <div class="middle-width">
+                <h1>Bis<span class="name-color">w</span>as</h1>
+                <h1>Hi, I am</h1>
+                <h2>Pallab Biswas</h2>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved
+                    moments.</p>
+                <a class="link-button" href="https://www.linkedin.com/feed/">
+                    Download CV</a>
+            </div>
+            <div class="right-width">
+                <h3><span>Portfolio</span><span>Blogs</span>
+                    <span><a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
+                </h3>
+                <img src="./Images/my.png" alt="">
+            </div>
+
         </div>
 
     </section>
+    <!-- section2 starts here -->
     <section>
         <div class="description">
             <h1>About Me</h1>
@@ -63,7 +68,37 @@
             </span>
         </div>
     </section>
+    <!-- section3 starts here -->
+    <section class="what-i-do">
+        <h1>What I Do</h1>
+        <div class="third-section">
+            <div class="technologies">
+                <img src="./icons/js.png" alt="">
+                <h2>Vanila javascript</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, possimus vel. Consectetur, esse
+                    nostrum? Atque?</p>
+            </div>
+            <div class="technologies">
+                <img src="./icons/react.png" alt="">
+                <h2>React</h2>
+                <p>Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores accusamus ullam inventore vel
+                    repellat aspernatur.</p>
+            </div>
+            <div class="technologies">
+                <img src="./icons/mongo.png" alt="">
+                <h2>Mongodb</h2>
+                <p>Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque
+                    cum ducimus.</p>
+            </div>
+            <div class="technologies">
+                <img src="./icons/nodejs.png" alt="">
+                <h2>nodejs</h2>
+                <p>Veritatis explicabo earum nisi voluptatibus ducimus, fugit perferendis iure ea perspiciatis error
+                    quas provident quidem!</p>
+            </div>
+        </div>
 
+    </section>
 </body>
 
 </html>
