--- a/index.html
+++ b/index.html
@@ -97,7 +97,89 @@
                     quas provident quidem!</p>
             </div>
         </div>
+    </section>
+    <!-- section 4 starts here -->
+    <section>
+        <h1 class="resume-header">A summary of My resume</h1>
+        <div class="division1">
+            <div class="resume">
+                <h3>My Education</h3>
+                <h1>Bachelor in CSE</h1>
+                <h2>WBUT/2004-2008</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor.</p>
+                <hr>
+            </div>
+            <div class="resume">
+                <h3>My Experience</h3>
+                <h1>11 years in ICT division in a Bank</h1>
+                <h2>Rupali Bank Ltd/2012-2023</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor</p>
+                <hr>
+            </div>
+        </div>
+        <div class="division1">
+            <div class="resume">
+                <h3>My Education</h3>
+                <h1>Bachelor in CSE</h1>
+                <h2>WBUT/2004-2008</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor.</p>
+                <hr>
+            </div>
+            <div class="resume">
+                <h3>My Experience</h3>
+                <h1>11 years in ICT division in a Bank</h1>
+                <h2>Rupali Bank Ltd/2012-2023</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor</p>
+                <hr>
+            </div>
+        </div>
+        <div class="division1">
+            <div class="resume">
+                <h3>My Education</h3>
+                <h1>Bachelor in CSE</h1>
+                <h2>WBUT/2004-2008</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor.</p>
 
+            </div>
+            <div class="resume">
+                <h3>My Experience</h3>
+                <h1>11 years in ICT division in a Bank</h1>
+                <h2>Rupali Bank Ltd/2012-2023</h2>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
+                    icons available. Aenean commodo ligula eget dolor</p>
+            </div>
+        </div>
+    </section>
+    <!-- download CV section -->
+    <section id="CV">
+        <a class="link-button" href="https://www.linkedin.com/feed/">
+            Download CV</a>
+    </section>
+    <!--last section starts here -->
+    <section id="last-section">
+        <div class="last-half">
+            <h1>Let's Connect</h1>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through Friday.</p>
+            <img src="./icons/facebook.png" alt="" srcset="">
+            <img src="./icons/twitter.png" alt="" srcset="">
+            <img src="./icons/insta.png" alt="" srcset="">
+
+        </div>
+        <div class="last-half">
+            <h1>Let's Message Me</h1>
+            <h4>Your Name</h4>
+            <h4>Your Email</h4>
+            <h4>Message</h4>
+            <section>
+                <a class="link-button" href="https://www.linkedin.com/feed/">
+                    Submit</a>
+        </div>
     </section>
 </body>
 
