--- a/index.html
+++ b/index.html
@@ -5,182 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My practice Portfolio-2023</title>
+    <title>Developer Portfolio-2023</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- linking google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- section1 starts here -->
-    <section>
-        <div class="flexible-container">
-            <div class="left-width">
-                <img src="./Images/developer.png" alt="" srcset="">
+    <header class="header">
+        <!-- navigation part-->
+        <nav>
+            <h2 class="nav-title">Pa<span class="title-color">ll</span>ab</h2>
+            <!-- menu set -->
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <!-- banner starts -->
+        <div class="banner">
+            <!-- left banner-->
+            <div>
+                <h3 class="banner-title">Hi, I am</h3>
+                <h1 class="banner-subtitle">Pallab Biswas</h1>
+                <p class="banner-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society
+                    behaved moments.</p>
+                <!-- button for left banner -->
+                <button class="btn-primary">Download CV</button>
             </div>
-            <div class="middle-width">
-                <h1>Bis<span class="name-color">w</span>as</h1>
-                <h1>Hi, I am</h1>
-                <h2>Pallab Biswas</h2>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
-                    behaved
-                    moments.</p>
-                <a class="link-button" href="https://www.linkedin.com/feed/">
-                    Download CV</a>
+            <!-- right banner image -->
+            <img src="./Images/pallab.png" alt="">
+        </div>
+    </header>
+    <main>
+        <!-- about me section -->
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-text">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <!-- information about section -->
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Pallab Biswas</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">pallab.b7@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:</p>
+                    <p class="info-description">20th september 1981</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <p class="info-description">Faridpur,Bangladesh</p>
+                </div>
             </div>
-            <div class="right-width">
-                <h3><span>Portfolio</span><span>Blogs</span>
-                    <span><a class="link-button" href="https://www.linkedin.com/feed/">Hire</a></span>
-                </h3>
-                <img src="./Images/my.png" alt="">
-            </div>
+        </section>
+    </main>
+    <footer>
 
-        </div>
-
-    </section>
-    <!-- section2 starts here -->
-    <section>
-        <div class="description">
-            <h1>About Me</h1>
-            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
-                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
-                while working with me. Delivering work within time and budget which meets clients requirements in our
-                mata.</p>
-        </div>
-        <div class="my-biodata">
-            <span>
-                <h1>Name:</h1>
-                <h3>Pallab Biswas</h3>
-            </span>
-            <span>
-                <h1>Email:</h1>
-                <h3>pallab.b7@gmail.com</h3>
-            </span>
-            <span>
-                <h1>Specialty:</h1>
-                <h3>front-end-developer</h3>
-            </span>
-            <span>
-                <h1>Location:</h1>
-                <h3>Faridpur,Bd</h3>
-            </span>
-        </div>
-    </section>
-    <!-- section3 starts here -->
-    <section class="what-i-do">
-        <h1>What I Do</h1>
-        <div class="third-section">
-            <div class="technologies">
-                <img src="./icons/js.png" alt="">
-                <h2>Vanila javascript</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, possimus vel. Consectetur, esse
-                    nostrum? Atque?</p>
-            </div>
-            <div class="technologies">
-                <img src="./icons/react.png" alt="">
-                <h2>React</h2>
-                <p>Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores accusamus ullam inventore vel
-                    repellat aspernatur.</p>
-            </div>
-            <div class="technologies">
-                <img src="./icons/mongo.png" alt="">
-                <h2>Mongodb</h2>
-                <p>Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque
-                    cum ducimus.</p>
-            </div>
-            <div class="technologies">
-                <img src="./icons/nodejs.png" alt="">
-                <h2>nodejs</h2>
-                <p>Veritatis explicabo earum nisi voluptatibus ducimus, fugit perferendis iure ea perspiciatis error
-                    quas provident quidem!</p>
-            </div>
-        </div>
-    </section>
-    <!-- section 4 starts here -->
-    <section>
-        <h1 class="resume-header">A summary of My resume</h1>
-        <div class="division1">
-            <div class="resume">
-                <h3>My Education</h3>
-                <h1>Bachelor in CSE</h1>
-                <h2>WBUT/2004-2008</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
-            </div>
-            <div class="resume">
-                <h3>My Experience</h3>
-                <h1>11 years in ICT division in a Bank</h1>
-                <h2>Rupali Bank Ltd/2012-2023</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor</p>
-                <hr>
-            </div>
-        </div>
-        <div class="division1">
-            <div class="resume">
-                <h3>My Education</h3>
-                <h1>Bachelor in CSE</h1>
-                <h2>WBUT/2004-2008</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
-            </div>
-            <div class="resume">
-                <h3>My Experience</h3>
-                <h1>11 years in ICT division in a Bank</h1>
-                <h2>Rupali Bank Ltd/2012-2023</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor</p>
-                <hr>
-            </div>
-        </div>
-        <div class="division1">
-            <div class="resume">
-                <h3>My Education</h3>
-                <h1>Bachelor in CSE</h1>
-                <h2>WBUT/2004-2008</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor.</p>
-
-            </div>
-            <div class="resume">
-                <h3>My Experience</h3>
-                <h1>11 years in ICT division in a Bank</h1>
-                <h2>Rupali Bank Ltd/2012-2023</h2>
-                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free
-                    icons available. Aenean commodo ligula eget dolor</p>
-            </div>
-        </div>
-    </section>
-    <!-- download CV section -->
-    <section id="CV">
-        <a class="link-button" href="https://www.linkedin.com/feed/">
-            Download CV</a>
-    </section>
-    <!--last section starts here -->
-    <section id="last-section">
-        <div class="last-half">
-            <h1>Let's Connect</h1>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
-                Monday through Friday.</p>
-            <img src="./icons/facebook.png" alt="" srcset="">
-            <img src="./icons/twitter.png" alt="" srcset="">
-            <img src="./icons/insta.png" alt="" srcset="">
-
-        </div>
-        <div class="last-half">
-            <h1>Let's Message Me</h1>
-            <h4>Your Name</h4>
-            <h4>Your Email</h4>
-            <h4>Message</h4>
-            <section>
-                <a class="link-button" href="https://www.linkedin.com/feed/">
-                    Submit</a>
-        </div>
-    </section>
+    </footer>
 </body>
 
 </html>
