--- a/index.html
+++ b/index.html
@@ -70,6 +70,43 @@
                 </div>
             </div>
         </section>
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <!-- emet--.skills-container>.skills*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="./icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor..</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume summary  -->
+        <section class="resume">
+            <h3 class="section-title">A summary of my resume</h3>
+            <div class="resume-content">
+
+            </div>
+        </section>
     </main>
     <footer>
 
