--- a/index.html
+++ b/index.html
@@ -100,12 +100,95 @@
                 </div>
             </div>
         </section>
-        <!-- resume summary  -->
+        <!-- resume summary left hand side -->
         <section class="resume">
             <h3 class="section-title">A summary of my resume</h3>
             <div class="resume-content">
-
+                <div>
+                    <h3 class="resume-title">My education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <!-- resume summary right hand side -->
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="subtitle">Apple Inc / 2022 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Jr. Font End Developer</h4>
+                        <h5 class="subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">HTML Developer</h4>
+                        <h5 class="subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
             </div>
+            <!--resume button styling -->
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h2 class="section-title">Lets Connect</h2>
+                <p class="section-text">Please fill out the form on this section to contact with me or call between 9:00
+                    A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <a href="">
+                    <img src="./icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="./icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="./icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h2 class="section-title">Lets Message Me</h2>
+                <!-- form creation -->
+                <input type="text" name="" id="" placeholder="your name">
+                <input type="email" name="" id="" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </div>
+
         </section>
     </main>
     <footer>
