--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio-2023</title>
+    <!-- awsome kit link from awsome.com for using awsome font  -->
+    <script src="https://kit.fontawesome.com/3f4689b0d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <!-- linking google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +38,9 @@
                     because as to society
                     behaved moments.</p>
                 <!-- button for left banner -->
-                <button class="btn-primary">Download CV</button>
+                <!-- font awsome icon copy and paste here -->
+                <button class="btn-primary"><i class="fa-brands fa-facebook-f"></i>
+                    Download CV</button>
             </div>
             <!-- right banner image -->
             <img src="./Images/pallab.png" alt="">
@@ -160,7 +164,7 @@
             </div>
             <!--resume button styling -->
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-brands fa-facebook-f"></i>Download CV</button>
             </div>
         </section>
         <!-- contact section -->
