--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio-2023</title>
     <!-- awsome kit link from awsome.com for using awsome font  -->
-    <script src="https://kit.fontawesome.com/3f4689b0d8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/07e3f924b6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <!-- linking google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
                     behaved moments.</p>
                 <!-- button for left banner -->
                 <!-- font awsome icon copy and paste here -->
-                <button class="btn-primary"><i class="fa-brands fa-facebook-f"></i>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>
                     Download CV</button>
             </div>
             <!-- right banner image -->
@@ -164,7 +164,7 @@
             </div>
             <!--resume button styling -->
             <div class="resume-button">
-                <button class="btn-primary"><i class="fa-brands fa-facebook-f"></i>Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section -->
