--- a/index.html
+++ b/index.html
@@ -114,62 +114,62 @@
                 </div>
             </div>
         </section>
-        <!-- resume summary left hand side -->
+        <!-- resume summary  -->
         <section>
-            <h3 class="section-resume">A summary of my resume</h3>
+            <h3 class="section-title">A summary of my resume</h3>
             <div class="resume-container">
-                <div>
-                    <h3 class="resume-resume">My education</h3>
-                    <div class="resume-column">
-                        <h4 class="resume-column">Master in Computer Engineering</h4>
-                        <h5 class="subresume">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My education</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.</p>
                     </div>
                     <hr>
-                    <div class="resume-column">
-                        <h4 class="resume">Master in Computer Engineering</h4>
-                        <h5 class="subresume">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.</p>
                     </div>
                     <hr>
-                    <div class="resume-column">
-                        <h4 class="resume-column">Master in Computer Engineering</h4>
-                        <h5 class="subresume">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.</p>
                     </div>
                 </div>
-                <!-- resume summary right hand side -->
-                <div>
-                    <h3 class="resume">My Experience</h3>
-                    <div class="resume-column">
-                        <h4 class="resume">Sr. Font End Developer</h4>
-                        <h5 class="subresume">Apple Inc / 2022 - Current</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2022 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                     <hr>
-                    <div class="resume-column">
-                        <h4 class="resume-column">Jr. Font End Developer</h4>
-                        <h5 class="subresume-column">Dribbble Inc / 2018 - 2022</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                     <hr>
-                    <div class="resume-column">
-                        <h3 class="resume-column">HTML Developer</h3>
-                        <h5 class="subresume">Adobe Inc / 2017 - 2018</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
+
                 </div>
             </div>
             <!--resume button styling -->
