--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <!--resume button styling -->
-            <div class="resume-button">
+            <div class="download-cv">
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
