--- a/index.html
+++ b/index.html
@@ -177,20 +177,6 @@
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
-
-
-
-
-        <div>
-            <h2 class="section-resume"></h2>
-            <!-- form creation -->
-            <input type="text" name="" id="" placeholder="your name">
-            <input type="email" name="" id="" placeholder="your email">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-            <input class="btn-primary" type="submit" value="submit">
-        </div>
-
-        </section>
     </main>
     <!-- contact section -->
     <footer>
@@ -200,20 +186,25 @@
                 between 9:00
                 A.M and 8.00 P.M ET,
                 Monday through Friday.</p>
-        </div>
-        <div class="social-links">
-            <a href="">
-                <img src="./icons/facebook.png" alt="">
-            </a>
-            <a href="">
-                <img src="./icons/twitter.png" alt="">
-            </a>
-            <a href="">
-                <img src="./icons/insta.png" alt="">
-            </a>
+
+            <div class="social-links">
+                <a href="">
+                    <img src="./icons/facebook.png" alt=""></a>
+                <a href="">
+                    <img src="./icons/twitter.png" alt=""></a>
+                <a href="">
+                    <img src="./icons/insta.png" alt=""></a>
+            </div>
         </div>
         <div class="footer-column">
             <h3 class="section-title">Lets Message Me</h3>
+            <!-- form creation -->
+            <form class="contact" action="">
+                <input type="text" name="" id="" placeholder="your name">
+                <input type="email" name="" id="" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
