--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     because as to society
                     behaved moments.</p>
                 <!-- button for left banner -->
-                <!-- font awsome icon copy and paste here -->
+                <!-- font awsome icon copy and paste here for download cv & contact button -->
                 <button class="btn-primary"><i class="fa-solid fa-download"></i>
                     Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
             </div>
             <!-- right banner image -->
             <img class="profile-pic" src="./Images/pallab.png" alt="">
